--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.3
   google_fonts: ^3.0.1
